@@ -20,6 +20,7 @@
 - Support for mongoid 7
 - Support update_columns in field_search, so cascading behaviour is available to field search as in create or update forms
 - Support floating footer in field_search, create and update, so footer may float to keep it visible when form is too long to fit
+- Support hide/show link in form columns with option :collapsible
 
 = 3.6.20
 - Fix numeric search on field search for rails >= 5.0
